--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -7,10 +7,7 @@
     <title>Vite + Lit + TS</title>
     <link rel="stylesheet" href="./src/index.css" />
     <script type="module" src="/src/my-element.ts"></script>
-    <script
-            src="https://jspm.dev/@spectrum-web-components/bundle/elements.js"
-            type="module" async
-    ></script>
+    <script type="module" src="/src/ASComponents.tsx"></script>
   </head>
   <body>
     <sp-theme
