start to try to figure out building from scratch

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -11,9 +11,10 @@
   </head>
   <body>
     <sp-theme
-            theme="classic"
             color="light"
             scale="large"
+            style="background-color: var(--spectrum-global-color-gray-100)"
+            flex={1}
             >
       <sp-top-nav size="xl">
         <sp-top-nav-item href="/"><strong>Evony TKR Tips</strong></sp-top-nav-item>
