this works for pages I have explicetly defined

--- a/packages/web/generals/index.html
+++ b/packages/web/generals/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/src/index.css" />
     <script type="module" src="/src/ASComponents.tsx"></script>
     <script type="module" src="/src/TopNav.tsx"></script>
+    <script type="module" src="/src/MarkDown.tsx"></script>
   </head>
   <body>
     <sp-theme
@@ -20,7 +21,7 @@
         <top-nav />
       </div>
       <main>
-        test
+        <mark-down />
       </main>
     </sp-theme>
   </body>
