half way between converting my markdown parser, but I'm fustrated with vite

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="spectrum spectrum--light spectrum--medium">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Lit + TS</title>
     <link rel="stylesheet" href="/src/index.css" />
+    <script type="module" src="/node_modules/zero-md/dist/zero-md.min.js"></script>
     <script type="module" src="/src/ASComponents.tsx"></script>
     <script type="module" src="/src/TopNav.tsx"></script>
     <script type="module" src="/src/MarkDown.tsx"></script>
@@ -13,7 +14,7 @@
   <body>
     <sp-theme
             color="light"
-            scale="large"
+            scale="medium"
             style=""
             flex={1}
             >
