--- a/packages/web/generals/index.html
+++ b/packages/web/generals/index.html
@@ -13,7 +13,7 @@
   <body>
     <sp-theme
             color="light"
-            scale="large"
+            scale="medium"
             style=""
             flex={1}
             >
