--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -1,28 +1,21 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
 
+<html lang="en" class="spectrum spectrum--medium spectrum--light">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="Description" content="Put your description here.">
-  <base href="/">
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, viewport-fit=cover'>
+  <meta name='Description' content='Tips for Budget Gamers'>
 
-  <style>
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-      background-color: #ededed;
-    }
-  </style>
-  <title>evony-tips</title>
+  <link rel="stylesheet" href="node_modules/@spectrum-css/vars/dist/spectrum-global.css">
+  <link rel="stylesheet" href="node_modules/@spectrum-css/vars/dist/spectrum-medium.css">
+  <link rel="stylesheet" href="node_modules/@spectrum-css/vars/dist/spectrum-light.css">
+  <link rel='stylesheet' href='./style.css' type='text/css'>
+  <script type='module' src='./components/evony-tips.js'></script>
+
+  <title>Evony TKR Tips</title>
 </head>
 
 <body>
   <evony-tips></evony-tips>
-
-  <script type="module" src="./out-tsc/src/evony-tips.js"></script>
 </body>
-
 </html>
