I need ot figure out wds mime types, which the website only vaguely mentions as something, before I can test further

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <meta name="Description" content="Tips for Budget Gamers" />
-    <link rel="stylesheet" href="./out-tsc/src/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <base href="/" />
 
     <title>Evony TKR Tips</title>
@@ -17,7 +17,11 @@
     <sp-theme theme="classic" color="light" scale="medium">
       <top-nav></top-nav>
     </sp-theme>
+    <main>
+      <mayor-table CvsName='./public/CSVs/attack_mayors.csv'></mayor-table>
+    </main>
 
-    <script type="module" src="./out-tsc/src/index.js"></script>
+    <script type="module" src="./lib/index.js"></script>
+    <script type="module" src="./lib/components/mayor_table.js"></script>
   </body>
 </html>
