mayor table loads, and is formatted somewhat reasonably considering the options I forgot

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -18,7 +18,7 @@
       <top-nav></top-nav>
     </sp-theme>
     <main>
-      <mayor-table CvsName='./public/CSVs/attack_mayors.csv'></mayor-table>
+      <mayor-table csv="attack_mayors.csv"></mayor-table>
     </main>
 
     <script type="module" src="./lib/index.js"></script>
