--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -15,12 +15,23 @@
 
   <body>
     <sp-theme theme="classic" color="light" scale="medium">
-      <top-nav></top-nav>
-    </sp-theme>
-    <main>
-      <mayor-table csv="attack_mayors.csv"></mayor-table>
-    </main>
+      <header>
+        <top-nav></top-nav>
+      </header>
+      <main>
+        <mayor-table csv="attack_mayors.csv"></mayor-table>
+      </main>
+      <footer>
+        <p>
+          Copyright © 2023-2024 Luke Schierer.<br/>
+          <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+            <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />
+          </a><br />
+          This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+        </p>
+      </footer>
 
+    </sp-theme>
     <script type="module" src="./lib/index.js"></script>
     <script type="module" src="./lib/components/mayor_table.js"></script>
   </body>
