closer to a correct inheritance and extension model

--- a/packages/web/index.html
+++ b/packages/web/index.html
@@ -18,7 +18,12 @@
         <top-nav></top-nav>
       </header>
       <main>
-        <mayor-table csv="attack_mayors.csv"></mayor-table>
+        <sp-table
+          csv="attack_mayors.csv"
+          size='m'
+          id='attack_mayors'
+          scroller='true'
+        ></sp-table>
       </main>
       <footer>
         <p>
